--- a/PyPoll.ipynb
+++ b/PyPoll.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "750330c5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "192fe113",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
     "\n",
     "for i in range(0, len(result_sum)):\n",
     "        if result_sum[i] > max:\n",
-    "            max = result [i]\n",
+    "            max = result_sum[i]\n",
     "            max_name = candidates_list[i]\n",
     "\n",
     "#print all the results\n",
